--- a/index.html
+++ b/index.html
@@ -59,15 +59,25 @@
         <div class="row">
           <div class="col-lg-6">
             <h1>Meet new and interesting dogs nearby.</h1>
-            <button type="button" class="btn btn-outline-dark btn-lg">
+            <button
+              type="button"
+              class="btn download-button btn-outline-dark btn-lg"
+            >
               <i class="fa-brands fa-apple me-2"></i>Download
             </button>
-            <button type="button" class="btn btn-outline-light btn-lg">
+            <button
+              type="button"
+              class="btn download-button btn-outline-light btn-lg"
+            >
               <i class="fa-brands fa-google-play me-2"></i>Download
             </button>
           </div>
           <div class="col-lg-6">
-            <img src="images/iphone6.png" alt="iphone-mockup" />
+            <img
+              class="title-image"
+              src="images/iphone6.png"
+              alt="iphone-mockup"
+            />
           </div>
         </div>
       </div>
@@ -76,14 +86,25 @@
     <!-- Features -->
 
     <section id="features">
-      <h3>Easy to use.</h3>
-      <p>So easy to use, even your dog could do it.</p>
+      <div class="row">
+        <div class="feature-box col-lg-4 col-md-12 col-sm-12">
+          <i class="fa-solid fa-circle-check fa-4x"></i>
+          <h3>Easy to use</h3>
+          <p>So easy to use, even your dog could do it.</p>
+        </div>
 
-      <h3>Elite Clientele</h3>
-      <p>We have all the dogs, the greatest dogs.</p>
+        <div class="feature-box col-lg-4 col-md-12 col-sm-12">
+          <i class="fa-solid fa-bullseye fa-4x"></i>
+          <h3>Elite Clientele</h3>
+          <p>We have all the dogs, the greatest dogs.</p>
+        </div>
 
-      <h3>Guaranteed to work.</h3>
-      <p>Find the love of your dog's life or your money back.</p>
+        <div class="feature-box col-lg-4 col-md-12 col-sm-12">
+          <i class="fa-solid fa-heart fa-4x"></i>
+          <h3>Guaranteed to work.</h3>
+          <p>Find the love of your dog's life or your money back.</p>
+        </div>
+      </div>
     </section>
 
     <!-- Testimonials -->
