--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       <p>Simple and affordable price plans for your and your dog.</p>
       <div class="row">
         <div class="pricing-column col-lg-4 col-md-12 col-sm-12">
-          <div class="card">
+          <div class="card h-100">
             <div class="card-header">
               <h3>Chihuahua</h3>
             </div>
@@ -192,8 +192,9 @@
               <p>5 Matches Per Day</p>
               <p>10 Messages Per Day</p>
               <p>Unlimited App Usage</p>
+              <br /><br />
               <button
-                class="btn btn-lg btn-block btn-outline-dark w-100"
+                class="btn-card btn btn-lg btn-block btn-outline-dark w-100"
                 type="button"
               >
                 Sign Up
@@ -203,7 +204,7 @@
         </div>
 
         <div class="pricing-column col-lg-4 col-md-12 col-sm-12">
-          <div class="card">
+          <div class="card h-100">
             <div class="card-header">
               <h3>Labrador</h3>
             </div>
@@ -212,8 +213,9 @@
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
               <p>Unlimited App Usage</p>
+              <br /><br />
               <button
-                class="btn btn-lg btn-block btn-outline-dark w-100"
+                class="btn-card btn btn-lg btn-block btn-outline-dark w-100"
                 type="button"
               >
                 Sign Up
@@ -223,7 +225,7 @@
         </div>
 
         <div class="pricing-column col-lg-4 col-md-12 col-sm-12">
-          <div class="card w-58">
+          <div class="card h-100">
             <div class="card-header">
               <h3>Mastiff</h3>
             </div>
@@ -234,7 +236,7 @@
               <p>Unlimited Messages</p>
               <p>Unlimited App Usage</p>
               <button
-                class="btn btn-lg btn-block btn-outline-dark w-100"
+                class="btn btn-lg btn-block btn-outline-dark w-100 btn-card"
                 type="button"
               >
                 Sign Up
