--- a/index.html
+++ b/index.html
@@ -251,13 +251,20 @@
 
     <section id="cta">
       <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+      <button class="download-button btn btn-lg btn-dark" type="button">
+        <i class="fa-brands fa-apple me-2"></i>Download
+      </button>
+      <button class="download-button btn btn-lg btn-light" type="button">
+        <i class="fa-brands fa-google-play me-2"></i>Download
+      </button>
     </section>
 
     <!-- Footer -->
 
     <footer id="footer">
+      <i class="fa-brands fa-facebook fa-2x"></i>
+      <i class="fa-brands fa-twitter fa-2x"></i>
+      <i class="fa-brands fa-instagram fa-2x"></i>
       <p>© Copyright TinDog</p>
     </footer>
   </body>
